force-app/main/default/objects/Club_Product__c/Club_Product__c.object-meta.xml
<CustomObject>
    <label>Club Product</label>
    <nameField>
        <label>Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>