force-app/main/default/objects/Club_Product__c/fields/Access_Member_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Access_Member_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Member Allowed?</label>
    <type>Checkbox</type>
</CustomField>