force-app/main/default/objects/Club_Product__c/fields/Allowed_Payment_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Payment_Types__c</fullName>
    <label>Allowed Payment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>