force-app/main/default/objects/Club_Product__c/fields/Associate_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Associate_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Allowed</label>
    <type>Checkbox</type>
</CustomField>