force-app/main/default/objects/Club_Product__c/fields/Card_Payment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Card_Payment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Payment Allowed</label>
    <type>Checkbox</type>
</CustomField>