force-app/main/default/objects/Club_Product__c/fields/Cash_Payment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Cash_Payment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Payment Allowed</label>
    <type>Checkbox</type>
</CustomField>