force-app/main/default/objects/Club_Product__c/fields/Children_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Children_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Children Allowed</label>
    <type>Checkbox</type>
</CustomField>