force-app/main/default/objects/Club_Product__c/fields/DD_Payment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>DD_Payment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Payment Allowed</label>
    <type>Checkbox</type>
</CustomField>