force-app/main/default/objects/Club_Product__c/fields/Finance_Code__c.field-meta.xml
<CustomField>
    <fullName>Finance_Code__c</fullName>
    <label>Finance Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>