force-app/main/default/objects/Club_Product__c/fields/isOverseas__c.field-meta.xml
<CustomField>
    <fullName>isOverseas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOverseas</label>
    <type>Checkbox</type>
</CustomField>