force-app/main/default/objects/Club_Product__c/fields/Membership_Length__c.field-meta.xml
<CustomField>
    <fullName>Membership_Length__c</fullName>
    <label>Membership Length (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>