force-app/main/default/objects/Club_Product__c/fields/Min_Age_for_Membership__c.field-meta.xml
<CustomField>
    <fullName>Min_Age_for_Membership__c</fullName>
    <label>Min Age for Membership</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>