force-app/main/default/objects/Club_Product__c/fields/Monthly_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This membership type is eligible to receive the Monthly Magazine</description>
    <label>Monthly Magazine</label>
    <type>Checkbox</type>
</CustomField>