force-app/main/default/objects/Club_Product__c/fields/New_Membership_Label__c.field-meta.xml
<CustomField>
    <fullName>New_Membership_Label__c</fullName>
    <formula>Product_Detail__c + &quot; £&quot; + TEXT( Price_for_Initial_Picklist__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Membership Label</label>
    <type>Text</type>
</CustomField>