force-app/main/default/objects/Club_Product__c/fields/PartnerAllowed__c.field-meta.xml
<CustomField>
    <fullName>PartnerAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Allowed</label>
    <type>Checkbox</type>
</CustomField>