force-app/main/default/objects/Club_Product__c/fields/Price_for_Initial_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Price_for_Initial_Picklist__c</fullName>
    <description>This is a display price only for the first page of membership flow</description>
    <label>Product Price</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>