force-app/main/default/objects/Club_Product__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>