force-app/main/default/objects/Club_Product__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <description>This field value appears in the New Membership picklist</description>
    <label>Product Detail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>