force-app/main/default/objects/Club_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Membership Code</fullName>
            </value>
            <value>
                <fullName>Associate Membership</fullName>
            </value>
            <value>
                <fullName>Section Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>