force-app/main/default/objects/Club_Product__c/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewable?</label>
    <type>Checkbox</type>
</CustomField>