force-app/main/default/objects/Club_Product__c/fields/Section_Area_Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Section_Area_Parent_Code__c</fullName>
    <formula>Section_Area_Parent_Name__r.Section_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Area Parent Code</label>
    <type>Text</type>
</CustomField>