force-app/main/default/objects/Club_Product__c/fields/Section_Area_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Area_Parent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Area Parent Name</label>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Section Areas</relationshipLabel>
    <relationshipName>Club_Products</relationshipName>
    <type>Lookup</type>
</CustomField>