force-app/main/default/objects/Club_Product__c/fields/Sections_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Sections_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sections Allowed</label>
    <type>Checkbox</type>
</CustomField>