force-app/main/default/objects/Club_Product__c/fields/SectionsAreFree__c.field-meta.xml
<CustomField>
    <fullName>SectionsAreFree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sections are Free</label>
    <type>Checkbox</type>
</CustomField>