force-app/main/default/objects/Club_Product__c/fields/Show_in_New_Membership_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Show_in_New_Membership_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Membership Codes that should appear in the picklist in New Membership process</description>
    <label>Show in New Membership Picklist</label>
    <type>Checkbox</type>
</CustomField>