force-app/main/default/objects/Club_Product__c/fields/VIClass__c.field-meta.xml
<CustomField>
    <fullName>VIClass__c</fullName>
    <description>For Internal system use, do not modify</description>
    <label>VIClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>