force-app/main/default/objects/Club_Product__c/fields/Visible_to_Admin_Users_Only__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Admin_Users_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Admin Users Only</label>
    <type>Checkbox</type>
</CustomField>