force-app/main/default/objects/Club_Product__c/fields/website_product_prompt__c.field-meta.xml
<CustomField>
    <fullName>website_product_prompt__c</fullName>
    <label>website product prompt</label>
    <type>TextArea</type>
</CustomField>