force-app/main/default/objects/Club_Product__c/recordTypes/Membership_Code.recordType-meta.xml
<RecordType>
    <fullName>Membership_Code</fullName>
    <active>true</active>
    <label>Membership Code</label>
</RecordType>