force-app/main/default/objects/Club_Product__c/recordTypes/Section_Area.recordType-meta.xml
<RecordType>
    <fullName>Section_Area</fullName>
    <active>true</active>
    <label>Section Area</label>
</RecordType>