force-app/main/default/objects/Club_Product__c/validationRules/Max_age_should_be_greater_than_min_age.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_age_should_be_greater_than_min_age</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Age_for_Membership__c  &lt;  Min_Age_for_Membership__c</errorConditionFormula>
    <errorDisplayField>Max_Age_for_Membership__c</errorDisplayField>
    <errorMessage>Max age for the membership code should be greater than Min age</errorMessage>
</ValidationRule>