force-app/main/default/objects/Club_Product__c/listViews/Associate_Membership.listView-meta.xml
<ListView>
    <fullName>Associate_Membership</fullName>
    <columns>NAME</columns>
    <columns>Product_Detail__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Club_Product__c.Associate_Membership</value>
    </filters>
    <label>Associate Membership</label>
</ListView>