force-app/main/default/objects/Club_Product__c/listViews/paid_for_types.listView-meta.xml
<ListView>
    <fullName>paid_for_types</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Price_for_Initial_Picklist__c</columns>
    <columns>Show_in_New_Membership_Picklist__c</columns>
    <columns>Visible_to_Admin_Users_Only__c</columns>
    <columns>DD_Payment_Allowed__c</columns>
    <columns>Cash_Payment_Allowed__c</columns>
    <columns>Card_Payment_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_for_Initial_Picklist__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Paid Membership types</label>
</ListView>