force-app/main/default/objects/Club_Product__c/listViews/Section_Areas.listView-meta.xml
<ListView>
    <fullName>Section_Areas</fullName>
    <columns>NAME</columns>
    <columns>Product_Detail__c</columns>
    <columns>Section_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Section_Area_Parent_Name__c</columns>
    <columns>Section_Area_Parent_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Club_Product__c.Section_Area</value>
    </filters>
    <label>Section Areas</label>
</ListView>