force-app/main/default/objects/Club_Product__c/listViews/Sections.listView-meta.xml
<ListView>
    <fullName>Sections</fullName>
    <columns>NAME</columns>
    <columns>Product_Detail__c</columns>
    <columns>Active__c</columns>
    <columns>Price_for_Initial_Picklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Club_Product__c.Section</value>
    </filters>
    <label>Sections</label>
</ListView>